--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -8,6 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.3"
+sqlparse = "^0.4.4"
+psycopg2-binary = "^2.9.9"
+pillow = "^10.3.0"
+ipython = "^8.23.0"
+django-stubs = "^4.2.7"
 
 
 [build-system]
