add redis and dotenv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ipython = "^8.23.0"
 django-stubs = "^4.2.7"
 pytils = "^0.4.1"
 django = "4.2.2"
+redis = "^5.0.4"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
